--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,8 @@
     "plugin:react/jsx-runtime",
     "plugin:react-hooks/recommended",
     "standard-with-typescript",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "prettier"
   ],
   "settings": {
@@ -21,21 +23,9 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": ["./tsconfig.json"]
   },
-  "overrides": [
-    {
-      "files": ["*.ts", "*.tsx"],
-      "extends": [
-        "plugin:@typescript-eslint/recommended",
-        "plugin:@typescript-eslint/recommended-requiring-type-checking"
-      ],
-
-      "parserOptions": {
-        "project": ["./tsconfig.json"]
-      }
-    }
-  ],
   "rules": {
     "quotes": [
       "error",
