--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
+  "main": "./dist/index.umd.js",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -20,8 +21,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "microbundle",
-    "dev": "microbundle watch",
+    "build": "microbundle build --globals react=React --no-compress",
+    "dev": "microbundle watch --globals react=React --no-compress",
     "test": "run-s eslint tsc-test jest",
     "eslint": "eslint",
     "jest": "jest",
