--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -13,6 +13,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
