--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=ismailcherri_react-jsx-flow
 sonar.organization=ismailcherri
 sonar.projectName=react-jsx-flow
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
