--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,7 @@ sonar.projectKey=ismailcherri_react-jsx-flow
 sonar.organization=ismailcherri
 sonar.projectName=react-jsx-flow
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=./test-report.xml
+sonar.sources=.
+sonar.exclusions=**/test/*
+sonar.tests=test
