Fix test coverage

--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
   },
   "jestSonar": {
     "reportPath": "coverage",
-    "reportFile": "test-reporter.xml",
-    "indent": 4
+    "reportFile": "test-report.xml"
   }
 }
