--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,5 @@ sonar.organization=ismailcherri
 sonar.projectName=react-jsx-flow
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.testExecutionReportPaths=./coverage/test-report.xml
-sonar.sources=./src
+sonar.sources=src
+sonar.test=test
