--- a/jest.config.json
+++ b/jest.config.json
@@ -2,7 +2,8 @@
   "clearMocks": true,
   "collectCoverage": true,
   "coverageDirectory": "coverage",
-  "coverageReporters": ["html", "lcov"],
+  "coverageReporters": ["html", "lcov", "text"],
+  "testResultsProcessor": "jest-sonar-reporter",
   "moduleDirectories": ["node_modules"],
   "collectCoverageFrom": ["src/**/*.[jt]s?(x)"],
   "moduleNameMapper": {
