--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
+    "jest-sonar-reporter": "^2.0.0",
     "microbundle": "^0.15.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
@@ -78,5 +79,9 @@
     "react-native": {
       "optional": true
     }
+  },
+  "jestSonar": {
+    "reportPath": "coverage",
+    "reportFile": "test-report.xml"
   }
 }
