--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,6 @@ sonar.projectKey=ismailcherri_react-jsx-flow
 sonar.organization=ismailcherri
 sonar.projectName=react-jsx-flow
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.testExecutionReportPaths=./coverage/test-report.xml
+sonar.sources=src
+sonar.test=test
